Fixed issue in which header images were stretched in tablet and mobile views

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -854,7 +854,6 @@ h4,
 
   .hero-image img {
     width: 100%;
-    max-height: 120px;
   }
 
   .hero-image > *:first-child {
